# GSoC2022-isosurfacing

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  links.txt
Isosurfacing_3/: Cartesian_grid_3.h  Cartesian_grid_domain.h  Cartesian_grid_domain2.h  Cartesian_grid_domain_old.h  Cartesian_grid_oracle.h  Cartesian_topology_base.h  Dual_contouring.h  Dual_contouring_3.h  Dual_contouring_octree_3.h  Function_oracle.h  Implicit_domain.h  Marching_cubes_3.h  Marching_tets_3.h  Octree_domain.h  Octree_oracle.h  Octree_wrapper.h  TC_marching_cubes_3.h  benchmark.cpp  example_01_implicit_function.cpp  example_02_cartesian_grid.cpp  example_03_mc_offset.cpp  example_04_dual_contouring.cpp  example_05_dc_offset.cpp  example_06_dual_contouring_octree.cpp  main.cpp  offset.cpp  types.h
Isosurfacing_3/Isosurfacing_3/internal/: Dual_contouring_internal.h  Marching_cubes_3.h  Marching_cubes_3_internal.h  Marching_tets_3_internal.h  Tables.h  Tmc_internal.h
Isosurfacing_3/benchmarks/: all_benchmarks.sh  benchmark.cpp  graphs.py  run_benchmark_size.sh  run_benchmark_threads.sh
Isosurfacing_3/examples/Isosurfacing_3/: CMakeLists.txt  example_01_implicit_function.cpp  example_02_cartesian_grid.cpp  example_03_mc_offset.cpp  example_04_dual_contouring.cpp  example_05_dc_offset.cpp  example_06_dual_contouring_octree.cpp  example_07_inrimage.cpp
src/: Cartesian_grid_3.h  Isosurface_3.h  Marching_cubes_3.h  Tables.h  main.cpp  util.h
